--- a/account/templates/account/checkin.html
+++ b/account/templates/account/checkin.html
@@ -20,11 +20,11 @@
                     </select></td></tr>
                     <td><label title="amount"> price: </label>
                     <select id="amount" name="amount">
-                        <option value="#5000"> Room 1 = #5000</option>
-                        <option value="#7000"> Room 2 = #7000</option>
-                        <option value="#7000"> Room 3 = #7000</option>
-                        <option value="#5000"> Room 4 = #5000</option>
-                        <option value="#5000"> Room 5 = #5000</option>
+                        <option value="₦5000"> Room 1 = ₦5000</option>
+                        <option value="₦7000"> Room 2 = ₦7000</option>
+                        <option value="₦7000"> Room 3 = ₦7000</option>
+                        <option value="₦5000"> Room 4 = ₦5000</option>
+                        <option value="₦5000"> Room 5 = ₦5000</option>
                     </select></td></tr>
                 </div>
                 <div>
