setting up about pages

--- a/account/templates/account/checkin.html
+++ b/account/templates/account/checkin.html
@@ -18,7 +18,7 @@
                         <option value="room 4"> Room 4</option>
                         <option value="room 5"> Room 5</option>
                     </select></td></tr>
-                    <td><label title="amount"> price: </label>
+                    <td><label title="amount"> Price: </label>
                     <select id="amount" name="amount">
                         <option value="₦5000"> Room 1 = ₦5000</option>
                         <option value="₦7000"> Room 2 = ₦7000</option>
