--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
     });
 </script>
-<script src="{% static 'home/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'home/assets/js/bootstrap.min.js' %}"></script>
 
 
 </head>
@@ -163,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <div class="information-grid five-star wow slideInLeft" data-wow-delay="0.3s">
 			  	<div class="col-md-4 hotel-info">
 			  		<div class="info-left">
-			  			<img src="{% static 'home/images/s1.png' %}" alt="">
+			  			<img src="{% static 'home/assets/images/s1.png' %}" alt="">
 			  		</div>
 			  		<div class="info-right">
 			  			<h4>Star Hotel</h4>
@@ -173,7 +173,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  	</div>
 			  	<div class="col-md-4 hotel-info">
 			  		<div class="info-left">
-			  			<img src="{% static 'home/images/s2.png' %}" alt="">
+			  			<img src="{% static 'home/assets/images/s2.png' %}" alt="">
 			  		</div>
 			  		<div class="info-right">
 			  			<h4>services</h4>
@@ -183,7 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  	</div>
 			  	<div class="col-md-4 hotel-info">
 			  		<div class="info-left">
-			  			<img src="{% static 'home/images/s4.png' %}" alt="">
+			  			<img src="{% static 'home/assets/images/s4.png' %}" alt="">
 			  		</div>
 			  		<div class="info-right">
 			  			<h4>Secure</h4>
@@ -196,7 +196,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  <div class="information-grid wow slideInRight" data-wow-delay="0.3s">
 			  	<div class="col-md-4 hotel-info">
 			  		<div class="info-left">
-			  			<img src="{% static 'home/images/s3.png' %}" alt="">
+			  			<img src="{% static 'home/assets/images/s3.png' %}" alt="">
 			  		</div>
 			  		<div class="info-right">
 			  			<h4>Food</h4>
@@ -206,7 +206,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  	</div>
 			  	<div class="col-md-4 hotel-info">
 			  		<div class="info-left">
-			  			<img src="{% static 'home/images/s5.png' %}" alt="">
+			  			<img src="{% static 'home/assets/images/s5.png' %}" alt="">
 			  		</div>
 			  		<div class="info-right">
 			  			<h4>Hotel</h4>
@@ -216,7 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  	</div>
 			  	<div class="col-md-4 hotel-info">
 			  		<div class="info-left">
-			  			<img src="{% static 'home/images/s6.png' %}" alt="">
+			  			<img src="{% static 'home/assets/images/s6.png' %}" alt="">
 			  		</div>
 			  		<div class="info-right">
 			  			<h4>Bell</h4>
@@ -252,7 +252,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div  id="effect-5" class="branch-btm">
 				<div  class="col-md-3 branch-gd-main" >					
 					<div class="branch-gd  no-mar"> <a href="room.html">
-						<img src="{% static 'home/images/b6.jpg' %}" alt="" class="img-responsive">
+						<img src="{% static 'home/assets/images/b6.jpg' %}" alt="" class="img-responsive">
 						<div class="overlay">
 		                    <span class="expand lardge">+</span>
 		                    <span class="close-overlay hidden">x</span>
@@ -261,14 +261,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>				
 				<div class="col-md-3 branch-gd-main">
 					<div class="branch-gd went-branc"><a href="room.html">
-						<img src="{% static 'home/images/b1.jpg' %}" alt="" class="img-responsive">
+						<img src="{% static 'home/assets/images/b1.jpg' %}" alt="" class="img-responsive">
 						<div class="overlay">
 		                    <span class="expand">+</span>
 		                    <span class="close-overlay hidden">x</span>
 	                   </div></a>
 					</div>
 					<div class="branch-gd went-branc"><a href="room.html">
-						<img src="{% static 'home/images/b2.jpg' %}" alt="" class="img-responsive">
+						<img src="{% static 'home/assets/images/b2.jpg' %}" alt="" class="img-responsive">
 						<div class="overlay">
 		                    <span class="expand">+</span>
 		                    <span class="close-overlay hidden">x</span>
@@ -293,7 +293,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 branch-gd-main">
 				  <div class="branch-gd went-branc2"><a href="room.html">
-					<img src="{% static 'home/images/b5.jpg' %}" alt="" class="img-responsive">
+					<img src="{% static 'home/assets/images/b5.jpg' %}" alt="" class="img-responsive">
 					<div class="overlay">
 		                    <span class="expand lardge">+</span>
 		                    <span class="close-overlay hidden">x</span>
@@ -366,7 +366,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="mask"> </div>
 					    </a>
 						<div class="item-img">
-								<img src="{% static 'home/images/b7.jpg' %}" class="img-responsive" alt="">
+								<img src="{% static 'home/assets/images/b7.jpg' %}" class="img-responsive" alt="">
 						</div>
 					</div>
 
@@ -384,7 +384,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="mask"> </div>
 					    </a>
 						<div class="item-img">
-								<img src="{% static 'home/images/b8.jpg' %}" class="img-responsive" alt="">
+								<img src="{% static 'home/assets/images/b8.jpg' %}" class="img-responsive" alt="">
 						</div>
 					</div>
 				</div>
@@ -401,7 +401,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="mask"> </div>
 					    </a>
 						<div class="item-img">
-								<img src="{% static 'home/images/b9.jpg' %}" class="img-responsive" alt="">
+								<img src="{% static 'home/assets/images/b9.jpg' %}" class="img-responsive" alt="">
 						</div>
 					</div>
 				</div>
@@ -419,7 +419,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-main">
 			<div class="col-md-3 ftr-grid wow zoomIn" data-wow-delay="0.3s">
 				<div class="ftr-logo">
-				<img src="{% static 'home/images/ftr-logo.png' %}"  alt="">
+				<img src="{% static 'home/assets/images/ftr-logo.png' %}"  alt="">
 				</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
 				<a href="single.html" class="ftr-btn">Read More</a>
